--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,11 @@ plugins {
 group = 'ru.clevetec'
 version = '0.1'
 
+java {
+    sourceCompatibility = JavaLanguageVersion.of(17)
+    targetCompatibility = JavaLanguageVersion.of(17)
+}
+
 repositories {
     mavenCentral()
 }
@@ -14,17 +19,20 @@ ext {
     junitVersion = '5.9.2'
     mockitoVersion = '5.6.0'
     assertJVersion = '3.24.2'
-    gsonVersion = '2.10.1'
+    jacksonVersion = '2.16.0-rc1'
 }
 
 dependencies {
-    testImplementation "com.google.code.gson:gson:${gsonVersion}"
+    testImplementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
+
+    testImplementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}"
 
     testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
 
     testImplementation "org.assertj:assertj-core:${assertJVersion}"
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
+    testImplementation("org.junit.jupiter:junit-jupiter-params:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
 
